Speichern von Kategorien pro Benutzer und Hinzufügen eines Bestätigungsdialogs zum Löschen
Dieser Commit führt folgende Änderungen ein:

- **Benutzerspezifische Kategorien:**
    - Kategorien werden jetzt pro Benutzer in Firestore gespeichert und synchronisiert.
    - Die `FirestoreManager`-Methoden `saveCategory` und `getCategories` erfordern nun eine `userId`.
    - `CategoryRepository` ruft die `userId` vom aktuellen Firebase-Benutzer ab und verwendet sie für Firestore-Operationen.
    - Beim Synchronisieren werden jetzt nur lokal vorhandene Kategorien zu Firestore hinzugefügt.
- **Bestätigungsdialog beim Löschen:**
    - Vor dem Löschen eines Artikels in der `DetailActivity` wird nun ein Bestätigungsdialog angezeigt.
    - Entsprechende String-Ressourcen für den Dialog wurden in Deutsch, Englisch, Spanisch, Französisch und Italienisch hinzugefügt.
- **Verbesserungen bei der Kategorienanzeige und -auswahl:**
    - `MainViewModel`: Die Kategorienliste wird nun korrekt sortiert (alphabetisch nach lokalisiertem Namen, "Alle" zuerst) und initial beim Start geladen. Die Synchronisation der Kategorien wird beim Refresh aufgerufen.
    - `CategorySelectionDialogFragment`:
        - Zeigt die initial ausgewählte Kategorie korrekt an.
        - Sortiert die Kategorienliste alphabetisch nach dem angezeigten Namen, wobei "Alle" immer zuerst erscheint.
        - Gibt den lokalisierten Kategorienamen zurück.
    - `CategoryAdapter`:
        - Zeigt nun RadioButtons an, um die aktuell ausgewählte Kategorie hervorzuheben.
        - Verwendet den lokalisierten Namen für die Anzeige und den Vergleich der ausgewählten Kategorie.
    - `MainActivity`: Die "Alle"-Kategorie wird nun korrekt anhand des internen Namens "all" identifiziert.
- **Korrekturen und Refactoring:**
    - `DetailViewModel`: Löscht Elemente jetzt auch aus Firestore.
    - `FirestoreManager`: `deleteItem`-Funktion hinzugefügt.
    Neue kategorien bleiben nicht

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -187,4 +187,7 @@
     
 
     <string name="name_and_location_category_cannot_be_empty">Name, Ort und Kategorie dürfen nicht leer sein.</string>
+    <string name="delete_item_confirmation_title">Gegenstand löschen?</string>
+    <string name="delete_item_confirmation_message">Sind Sie sicher, dass Sie diesen Gegenstand löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden.</string>
+    <string name="cancel">Abbrechen</string>
 </resources>
