--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -187,4 +187,7 @@
     
 
     <string name="name_and_location_category_cannot_be_empty">Le nom, l\'emplacement et la catégorie ne peuvent pas être vides.</string>
+    <string name="delete_item_confirmation_title">Supprimer l\'item ?</string>
+    <string name="delete_item_confirmation_message">Êtes-vous sûr de vouloir supprimer cet article ? Cette action est irréversible.</string>
+    <string name="cancel">Annuler</string>
 </resources>
