--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -189,4 +189,7 @@
 
     
 
+    <string name="delete_item_confirmation_title">Delete Item?</string>
+    <string name="delete_item_confirmation_message">Are you sure you want to delete this item? This action cannot be undone.</string>
+    <string name="cancel">Cancel</string>
 </resources>
