Lokalisierung und Benutzererfahrung verbessert, Onboarding und Profil-Setup
Dieser Commit implementiert die folgenden Änderungen:

- **Onboarding und Profil-Setup:**
    - Ein neuer Onboarding-Flow (`OnboardingActivity`) wird beim ersten Start der App angezeigt.
    - Eine `ProfileSetupActivity` ermöglicht es neuen Benutzern, ihren Namen einzugeben.
    - Der `AuthActivity` leitet Benutzer nun je nach Status zum Onboarding, Profil-Setup oder zur Haupt-App weiter.
- **Verbesserte Kategorielokalisierung und -behandlung:**
    - `CategoryLocaleMapper` hinzugefügt, um Kategorienamen zwischen internen Schlüsseln und lokalisierten Strings zu übersetzen.
    - Kategorien werden jetzt intern mit einem `userId`-Feld versehen (Defaults haben eine leere `userId`).
    - `CategoryDao` wurde aktualisiert, um Kategorien pro Benutzer zu verwalten und Duplikate (Groß-/Kleinschreibung irrelevant) zu prüfen.
    - `CategoryRepository` synchronisiert benutzerdefinierte und anonym erstellte Kategorien mit Firestore und lädt Kategorien basierend auf dem eingeloggten Benutzer.
    - `MainViewModel` verwendet nun Kategorie-Keys statt direkt lokalisierter Namen für die Filterung und zeigt lokalisierte Namen an.
    - In `AddItemActivity` und `DetailActivity` werden Kategorien nun lokalisiert angezeigt und beim Speichern der kanonische Key verwendet.
    - Die `InventoryApp` führt beim Start eine einmalige Normalisierung durch, um bestehende Item-Kategorien auf kanonische Schlüssel und Ressourcen-IDs zu migrieren.
    - Standardkategorien werden initial mit Keys statt lokalisierten Strings gespeichert.
    - Bei der Erstellung einer neuen Kategorie im `CategorySelectionDialogFragment` wird der Benutzer über den Speicherstatus informiert (lokal/Cloud).
- **Firestore-Regeln und Storage-Regeln:**
    - Firestore-Regeln (`FirestoreDatabase.txt`) aktualisiert, um den Zugriff auf Benutzerprofile und deren Unterkollektionen (Kategorien) sowie Items basierend auf der `userId` zu steuern.
    - Stor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -163,6 +163,10 @@
     <string name="toast_sync_error_no_internet">No internet connection. Could not sync data.</string>
     <string name="toast_sync_error_not_logged_in">Not logged in.</string>
     <string name="toast_sync_error_generic">Synchronization failed: %s</string>
+    <string name="profile_setup_title">Set up your profile</string>
+    <string name="profile_setup_subtitle">Enter your name to personalize your experience.</string>
+    <string name="category_saved">Category saved</string>
+    <string name="category_saved_offline_sync_later">Category saved locally and will sync when online</string>
     <string name="settings_cache_summary_dynamic">Currently using %s</string>
     <string name="dialog_clear_cache_title">Confirm Clear Cache</string>
     <string name="dialog_clear_cache_message">Are you sure you want to delete all cached data? This will free up %s of space.</string>
@@ -180,6 +184,17 @@
     <string name="category_miscellaneous">Miscellaneous</string>
     <string name="category_office">Office</string>
     <string name="category_tools">Tools</string>
+    
+    <!-- Onboarding -->
+    <string name="onb_title_welcome">Welcome to What’sWhere</string>
+    <string name="onb_desc_welcome">Keep track of your items and always know where things are.</string>
+    <string name="onb_title_organize">Organize and Find</string>
+    <string name="onb_desc_organize">Use categories, search, and filters to quickly find your belongings.</string>
+    <string name="onb_title_scan">Scan &amp; Add</string>
+    <string name="onb_desc_scan">Add items easily and use QR codes to identify them.</string>
+    <string name="onb_button_skip">Skip</string>
+    <string name="onb_button_next">Next</string>
+    <string name="onb_button_start">Get Started</string>
 
     
 
