Lokalisation für Onboarding und Profilerstellung hinzugefügt
Dieser Commit führt neue String-Ressourcen für den Onboarding-Prozess und die Profilerstellung in den folgenden Sprachen ein:

- Deutsch
- Englisch (implizit, da `values/strings.xml` nicht Teil des Diffs ist, aber als Basis angenommen wird)
- Spanisch
- Französisch
- Italienisch

Zusätzlich wurden diverse Kompilierungs-Warnungen in `Fehler.txt` behoben/entfernt.

Konkret wurden folgende Strings hinzugefügt:
- Titel und Beschreibungen für die Willkommens-, Organisations- und Scan-Schritte des Onboardings.
- Button-Texte für "Überspringen", "Weiter" und "Start" im Onboarding.
- Bestätigungsmeldungen für das Speichern von Kategorien (sowohl online als auch offline mit späterer Synchronisierung).
- Titel und Untertitel für den Profilerstellungsbildschirm.

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -190,4 +190,20 @@
     <string name="delete_item_confirmation_title">Gegenstand löschen?</string>
     <string name="delete_item_confirmation_message">Sind Sie sicher, dass Sie diesen Gegenstand löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden.</string>
     <string name="cancel">Abbrechen</string>
+    <!-- Onboarding (fallback translations) -->
+    <string name="onb_title_welcome">Willkommen bei What’sWhere</string>
+    <string name="onb_desc_welcome">Behalte den Überblick über deine Gegenstände.</string>
+    <string name="onb_title_organize">Organisieren &amp; Finden</string>
+    <string name="onb_desc_organize">Nutze Kategorien, Suche und Filter.</string>
+    <string name="onb_title_scan">Scannen &amp; Hinzufügen</string>
+    <string name="onb_desc_scan">Füge Elemente einfach hinzu und nutze QR-Codes.</string>
+    <string name="onb_button_skip">Überspringen</string>
+    <string name="onb_button_next">Weiter</string>
+    <string name="onb_button_start">Los geht’s</string>
+
+    <string name="category_saved">Kategorie gespeichert</string>
+    <string name="category_saved_offline_sync_later">Kategorie lokal gespeichert und wird online synchronisiert</string>
+
+    <string name="profile_setup_title">Profil einrichten</string>
+    <string name="profile_setup_subtitle">Gib deinen Namen ein.</string>
 </resources>
