Filtert Kategorien und verbessert Sortierdialog und Onboarding
Dieser Commit implementiert die folgenden Änderungen:

- **Kategorien-Filterung und -Bereinigung:**
    - Fälschlicherweise als Kategorien gespeicherte Status-/Toast-Nachrichten (`category_saved`, `category_saved_offline_sync_later`) werden nun aus der Anzeige in `MainViewModel` und `AddItemViewModel` herausgefiltert.
    - `InventoryApp` führt beim Start eine Bereinigung durch, um solche fehlerhaften Kategorieeinträge aus der lokalen Datenbank zu löschen (`purgeErroneousStatusCategoriesIfAny`).
    - `CategoryDao` wurde um `deleteByResourceIds` erweitert.
    - Beim Hinzufügen einer neuen Kategorie in `AddItemViewModel` wird nun geprüft und verhindert, dass Status-/Toast-Texte oder bereits existierende Standardkategorien erneut hinzugefügt werden.
- **Sortierdialog (`SortSelectionDialogFragment`):**
    - Verwendet nun ein benutzerdefiniertes Layout (`dialog_sort_selection.xml`) mit einem `RecyclerView` und einem `SortOptionAdapter` anstelle des Standard-AlertDialog-SingleChoice-Items.
    - Das Aussehen wurde dem Kategoriendialog angeglichen (abgerundeter Hintergrund, feste Breite).
    - Ein `App.TransparentDialogTheme` wurde hinzugefügt und wird für den Dialog verwendet, um einen anfänglichen Systemhintergrund-Flash zu vermeiden.
    - Der Titel wird nun korrekt aus den String-Ressourcen geladen.
- **Onboarding-Benutzeroberfläche (`OnboardingActivity`):**
    - Das Layout (`activity_onboarding.xml`) wurde überarbeitet:
        - "Überspringen"-Button, Punkte-Indikatoren und "Weiter"-Button sind nun in einer unteren Leiste horizontal angeordnet, wobei die Punkte zentriert sind.
    - Das Layout der Onboarding-Seiten (`item_onboarding_page.xml`) wurde angepasst, um Inhalte besser zu zentrieren.
    - Ein themenabhängiges QR-Code-Icon (`ic_qr_code_themed`) wird verwendet.
    - Der Text des "Start"-Buttons wurde in Englisch und Deutsch von "Get Started"/"Los geht's" zu "Start"/"Starten" geändert.
- **Ma

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -199,7 +199,7 @@
     <string name="onb_desc_scan">Füge Elemente einfach hinzu und nutze QR-Codes.</string>
     <string name="onb_button_skip">Überspringen</string>
     <string name="onb_button_next">Weiter</string>
-    <string name="onb_button_start">Los geht’s</string>
+    <string name="onb_button_start">Starten</string>
 
     <string name="category_saved">Kategorie gespeichert</string>
     <string name="category_saved_offline_sync_later">Kategorie lokal gespeichert und wird online synchronisiert</string>
