--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -194,7 +194,7 @@
     <string name="onb_desc_scan">Add items easily and use QR codes to identify them.</string>
     <string name="onb_button_skip">Skip</string>
     <string name="onb_button_next">Next</string>
-    <string name="onb_button_start">Get Started</string>
+    <string name="onb_button_start">Start</string>
 
     
 
